# cppRenderer

./: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  DirectionalLight.cpp  DirectionalLight.h  Framebuffer.cpp  Framebuffer.h  GameObject.cpp  GameObject.h  Geometry.h  InputManager.cpp  InputManager.h  InputState.h  Light.h  Material.h  MaterialHandler.cpp  MaterialHandler.h  Mesh.cpp  Mesh.h  RenderContext.h  Renderable.h  Renderer.cpp  Renderer.h  ResourceHandler.h  Settings.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureHandler.cpp  TextureHandler.h  TextureLoader.cpp  TextureLoader.h  Transform.h  Vertex.h  Window.cpp  Window.h  (+4 more)
input/: Action.h  InputManager.cpp  InputManager.h  InputState.h  KeyBindings.h
renderer/: Framebuffer.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
shaders/: clouds.fs  clouds.vs  directional_light.fs  lit.fs  point_light.fs  shader.fs  shader.vs  spot_light.fs  unlit.fs
